templates/clusters/aws-infra/resources/resources.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Additional AWS resources for the {{cluster_name}} cluster

Parameters:
  VpcId:
    Type: String
  PrivateSubnetIds:
    Type: CommaDelimitedList
  PrivateRouteTableIds:
    Type: CommaDelimitedList
  OpenSearchVersion:
    Type: String
    AllowedValues: ['OpenSearch_2.17', 'OpenSearch_2.15', 'OpenSearch_2.13', 'OpenSearch_2.11', 'OpenSearch_2.9','OpenSearch_2.7', 'OpenSearch_2.5', 'OpenSearch_2.3', 'OpenSearch_1.3']
    Default: 'OpenSearch_2.17'
  OpenSearchSingleNodeCluster:
    Type: String
    Default: false
  OpenSearchInstanceType:
    Type: String
    Default: 'm5.large.search'
  OpenSearchVolumeSize:
    Type: Number
    Default: 20
  BackupRegion:
    Type: String
    Default: ''
    AllowedValues:
      - ''
      - us-east-1
      - us-east-2
      - us-west-1
      - us-west-2
      - ca-central-1
      - ap-south-1
      - ap-northeast-2
      - ap-southeast-1
      - ap-southeast-2
      - ap-northeast-1
      - eu-central-1
      - eu-west-1
      - eu-west-2
      - sa-east-1
  BackupRegionBucketNamePrefix:
    Type: String
    Default: ''
  DeliveryInstanceCount:
    Type: String
    Default: '2'

Conditions:
  UseBackupRegion:
    !And [!Not [!Equals [!Ref BackupRegion, '']], !Not [!Equals [!Ref BackupRegionBucketNamePrefix, '']]]
  IsOpenSearchSingleNodeCluster:
    !Equals [true, !Ref OpenSearchSingleNodeCluster]

Resources:
# S3 Log-forwarding config
  # ClusterLogsBucket:
  #   DeletionPolicy: Retain
  #   Type: AWS::S3::Bucket
  #   Properties:
  #     BucketName: {{cluster_logs_s3_bucket_name}}
  #     OwnershipControls:
  #       Rules:
  #         - ObjectOwnership: BucketOwnerPreferred
  #     PublicAccessBlockConfiguration:
  #       BlockPublicAcls: true
  #       IgnorePublicAcls: true
  #       BlockPublicPolicy: true
  #       RestrictPublicBuckets: true

  AuthoringNodeGroupSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: {{cluster_name}}-authoring-nodegroup-sg
        GroupDescription: sg for authoring nodegroup in {{cluster_name}} to grant access to authoring loadblancer only
        VpcId: !Ref VpcId
        SecurityGroupIngress:
          - FromPort: '8080'
            IpProtocol: tcp
            ToPort: '8080'
            SourceSecurityGroupId: !Ref AuthoringBackendSecurityGroup
        SecurityGroupEgress:
          - IpProtocol: -1
            FromPort: 0
            ToPort: 0
            CidrIp: 0.0.0.0/0

  AuthoringBackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: {{cluster_name}}-authoring-backend-sg
      GroupDescription: Backend sg for authoring LB in {{cluster_name}}
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  AuthoringFrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: {{cluster_name}}-authoring-frontend-sg
      GroupDescription: Frontend sg for authoring LB in {{cluster_name}}
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  DeliveryNodeGroupSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: {{cluster_name}}-delivery-nodegroup-sg
        GroupDescription: sg for delivery nodegroup in {{cluster_name}} to grant access to delivery loadblancer only
        VpcId: !Ref VpcId
        SecurityGroupIngress:
          - FromPort: '8080'
            IpProtocol: tcp
            ToPort: '8080'
            SourceSecurityGroupId: !Ref DeliveryBackendSecurityGroup
        SecurityGroupEgress:
          - IpProtocol: -1
            FromPort: 0
            ToPort: 0
            CidrIp: 0.0.0.0/0

  DeliveryBackendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: {{cluster_name}}-delivery-backend-sg
      GroupDescription: Backend sg for delivery LB in {{cluster_name}}
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  DeliveryFrontendSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: {{cluster_name}}-delivery-frontend-sg
      GroupDescription: Frontend sg for delivery LB in {{cluster_name}}
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - FromPort: '80'
          IpProtocol: tcp
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  AuthoringWebACL:
    Type: AWS::WAFv2::WebACL
    Properties:
      Description: Bot control WebACL for Authoring in the {{cluster_name}} cluster
      VisibilityConfig:
        CloudWatchMetricsEnabled: true
        MetricName: AllowedRequests
        SampledRequestsEnabled: true 
      DefaultAction: 
        Allow: {}
      Scope:
        "REGIONAL"
      Rules: 
        - Name: bot-control-rules
          OverrideAction:
            None: {}
          Priority: 0
          Statement:
            ManagedRuleGroupStatement:
              VendorName: AWS
              Name: AWSManagedRulesBotControlRuleSet
              ManagedRuleGroupConfigs:
                - AWSManagedRulesBotControlRuleSet:
                    EnableMachineLearning: false
                    InspectionLevel: COMMON
              RuleActionOverrides:
                - Name: CategoryMonitoring
                  ActionToUse:
                    Allow: {}
                - Name: SignalNonBrowserUserAgent
                  ActionToUse:
                    Allow: {}
                - Name: CategoryHttpLibrary
                  ActionToUse:
                    Allow: {}
          VisibilityConfig:
            CloudWatchMetricsEnabled: true
            MetricName: bot-control-rules
            SampledRequestsEnabled: true

  GuardDutyEndPoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref VpcId
      VpcEndpointType: Interface
      PrivateDnsEnabled: True
      SecurityGroupIds:
          - !Ref GuardDutySecurityGroup
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.guardduty-data"
      SubnetIds: !Ref PrivateSubnetIds
      PolicyDocument: !Sub |
        {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Action": "*",
              "Resource": "*",
              "Effect": "Allow",
              "Principal": "*"
            },
            {
              "Condition": {
                "StringNotEquals": {
                  "aws:PrincipalAccount": "${AWS::AccountId}" 
                }
              },
              "Action": "*",
              "Resource": "*",
              "Effect": "Deny",
              "Principal": "*"
            }
          ]
        }
  GuardDutySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "GuardDuty security group"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 1
          CidrIp: 0.0.0.0/32

  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds: !Ref PrivateRouteTableIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref VpcId
        
  OpenSearchSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allows access to OpenSearch domains from the nodes of the {{cluster_name}} cluster"
      VpcId: !Ref VpcId
      GroupName: "{{cluster_name}}-es-sg"
      SecurityGroupIngress:
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          SourceSecurityGroupId: !Ref AuthoringNodeGroupSecurityGroup
        - FromPort: '443'
          IpProtocol: tcp
          ToPort: '443'
          SourceSecurityGroupId: !Ref DeliveryNodeGroupSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  OpenSearchDomain:
    Type: AWS::OpenSearchService::Domain
    Properties:
      DomainName: '{{cluster_name}}-opensearch'
      EngineVersion: !Ref OpenSearchVersion
      EncryptionAtRestOptions:
        Enabled: true
      ClusterConfig:
        DedicatedMasterEnabled: false
        InstanceCount: !If [IsOpenSearchSingleNodeCluster, '1', '3']
        ZoneAwarenessEnabled: !If [IsOpenSearchSingleNodeCluster, 'false', 'true']
        ZoneAwarenessConfig:
          !If
          - IsOpenSearchSingleNodeCluster
          - !Ref 'AWS::NoValue'
          - AvailabilityZoneCount: "3"
        InstanceType: !Ref OpenSearchInstanceType
        MultiAZWithStandbyEnabled: false
      EBSOptions:
        EBSEnabled: true
        VolumeSize: !Ref OpenSearchVolumeSize
        Iops: 3000
        Throughput: 125
        VolumeType: "gp3"
      AccessPolicies:
        Version: 2012-10-17
        Statement:
          - Effect: "Allow"
            Principal: "*"
            Action: "es:*"
            Resource: !Sub "arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/{{cluster_name}}-opensearch/*"
      AdvancedOptions:
        rest.action.multi.allow_explicit_index: 'true'
        indices.query.bool.max_clause_count: '8192'
      VPCOptions:
        SubnetIds:
          !If
          - IsOpenSearchSingleNodeCluster
          - 
            - !Select [0, !Ref PrivateSubnetIds] 
          - !Ref PrivateSubnetIds
        SecurityGroupIds:
          - !Ref OpenSearchSecurityGroup

  KuberVolumeLifecyclePolicy:
    Type: AWS::DLM::LifecyclePolicy
    Properties:
      Description: "{{cluster_name}} Kubernetes Volume Backups"
      State: "ENABLED"
      ExecutionRoleArn: !Sub "arn:aws:iam::${AWS::AccountId}:role/AWSDataLifecycleManagerDefaultRole"
      PolicyDetails:
        ResourceTypes:
          - "VOLUME"
        TargetTags:
          - Key: "kubernetes.io/cluster/{{cluster_name}}"
            Value: "owned"
        Schedules:
          - Name: "Daily Backup"
            CreateRule:
              Interval: 24
              IntervalUnit: "HOURS"
              Times:
                - "{{kuber_volume_daily_backup_time_utc}}"
            RetainRule:
              Count: 3
            CopyTags: true
            CrossRegionCopyRules:
              !If
              - UseBackupRegion
              - 
                - Target: !Ref BackupRegion              
                  Encrypted: false
                  CopyTags: true
                  RetainRule:
                    Interval: 3
                    IntervalUnit: "DAYS"    
              - !Ref 'AWS::NoValue'

  S3BackupBucketLambdaRole:
    Type: AWS::IAM::Role
    Condition: UseBackupRegion
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: lambda.amazonaws.com
      Policies:
        - PolicyName: S3BackupBucketLambdaPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*"
              - Effect: Allow
                Action:
                  - s3:CreateBucket
                  - s3:PutBucketPublicAccessBlock
                  - s3:PutBucketVersioning
                Resource: !Sub "arn:aws:s3:::${BackupRegionBucketNamePrefix}-*"

  S3BackupBucketLambda:
    Type: AWS::Lambda::Function
    Condition: UseBackupRegion
    Properties:
      Tags:
        - Key: craftercms:environment
          Value: {{environment}}
        - Key: craftercms:prod
          Value: {{prod_env}}
      FunctionName: "{{cluster_name}}-s3-backup-bucket-lambda"
      Runtime: python3.13
      Role: !GetAtt S3BackupBucketLambdaRole.Arn
      Handler: index.handler
      Timeout: 30
      Code:
        ZipFile: |
          import cfnresponse
          import logging
          import boto3
          from botocore.exceptions import ClientError

          logger = logging.getLogger()
          logger.setLevel(logging.INFO)

          class BackupBucketSetupException(Exception):
              pass

          def handler(event, context):
              bucket_name = event['ResourceProperties']['BackupBucketName']
              bucket_region = event['ResourceProperties']['BackupBucketRegion']

              try:
                  if event['RequestType'] == 'Create' or event['RequestType'] == 'Update':
                      client = boto3.client('s3', region_name=bucket_region)

                      try:
                          if bucket_region == 'us-east-1':
                              client.create_bucket(Bucket=bucket_name)
                          else:
                              client.create_bucket(
                                  Bucket=bucket_name,
                                  CreateBucketConfiguration={
                                      'LocationConstraint': bucket_region
                                  }
                              )                          

                          logger.info("Created bucket '%s'", bucket_name)
                      except ClientError as error:
                          if error.response['Error']['Code'] == 'BucketAlreadyOwnedByYou':
                              logger.warning("Bucket '%s' already exists! Using it", bucket_name)
                          else:
                              raise

                      client.put_public_access_block(
                          Bucket=bucket_name,
                          PublicAccessBlockConfiguration={
                              'BlockPublicAcls': True,
                              'IgnorePublicAcls': True,
                              'BlockPublicPolicy': True,
                              'RestrictPublicBuckets': True
                          }
                      )

                      logger.info("Blocked all public access to bucket '%s'", bucket_name)

                      client.put_bucket_versioning(
                          Bucket=bucket_name,
                          VersioningConfiguration={
                              'Status': 'Enabled'
                          }
                      )

                      logger.info("Enabled versioning on bucket '%s'", bucket_name)
                      logger.info("Setup of backup bucket '%s' complete", bucket_name)

                      response_data = {
                          'Name': bucket_name,
                          'Arn': f"arn:aws:s3:::{bucket_name}"
                      }

                      cfnresponse.send(event, context, cfnresponse.SUCCESS, response_data, bucket_name)
                  elif event['RequestType'] == 'Delete':
                      logger.info("Please delete the '%s' backup bucket", bucket_name)

                      cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, bucket_name)
              except Exception as error:
                  logger.exception("Error when setting up backup bucket '%s'", bucket_name)

                  cfnresponse.send(event, context, cfnresponse.FAILED, {'Error': str(error)})

Outputs:
  OpenSearchDomainEndpoint:
    Value: !GetAtt OpenSearchDomain.DomainEndpoint
  S3BackupBucketLambdaArn:
    Value: !GetAtt [S3BackupBucketLambda, Arn]
    Condition: UseBackupRegion
  AuthoringWebACLArn:
    Value: !GetAtt AuthoringWebACL.Arn
  AuthoringBackendSecurityGroup:
    Value: !GetAtt AuthoringBackendSecurityGroup.GroupId
  AuthoringFrontendSecurityGroup:
    Value: !GetAtt AuthoringFrontendSecurityGroup.GroupId
  AuthoringNodeGroupSecurityGroup:
    Value: !GetAtt AuthoringNodeGroupSecurityGroup.GroupId
  DeliveryBackendSecurityGroup:
    Value: !GetAtt DeliveryBackendSecurityGroup.GroupId
  DeliveryFrontendSecurityGroup:
    Value: !GetAtt DeliveryFrontendSecurityGroup.GroupId
  DeliveryNodeGroupSecurityGroup:
    Value: !GetAtt DeliveryNodeGroupSecurityGroup.GroupId
